--- a/client/package.json
+++ b/client/package.json
@@ -2,13 +2,26 @@
   "name": "client",
   "version": "0.0.1",
   "description": "the monaco-editor along with the monaco-languageclient.",
-  "main": "index.js",
-  "devDependencies": {},
+  "main": "dist/client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx webpack --mode=development",
     "dev": "npx webpack-dev-server --mode=development"
   },
-  "author": "",
-  "license": "MIT"
+  "author": "Mihir Singh <mihirs16@gmail.com> (https://github.com/mihirs16)",
+  "license": "MIT",
+  "dependencies": {
+    "monaco-editor": "^0.33.0",
+    "monaco-languageclient": "^1.1.0"
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.7.3",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
+  }
 }
