--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,17 @@
   "license": "MIT",
   "dependencies": {
     "monaco-editor": "^0.33.0",
-    "monaco-languageclient": "^1.1.0"
+    "monaco-languageclient": "^1.1.0",
+    "vscode-ws-jsonrpc": "^1.0.1"
   },
   "devDependencies": {
     "css-loader": "^6.7.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
+    "path-browserify": "^1.0.1",
     "style-loader": "^3.3.1",
+    "ts-lib": "^0.0.5",
     "ts-loader": "^9.3.0",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.3",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
