--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.1",
   "description": "a lightweight yet fully-featured IDE that can be embedded into web apps.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run dev -w p2p-relay"
   },
   "author": "Mihir Singh <mihirs16@gmail.com> (https://github.com/mihirs16)",
   "license": "MIT",
   "workspaces": [
     "client",
-    "jsonrpc-ws-proxy"
+    "jsonrpc-ws-proxy",
+    "p2p-relay"
   ]
 }
