--- a/p2p-relay/package.json
+++ b/p2p-relay/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "npx tsc",
     "dev": "node dist/server.js"
   },
   "repository": {
