feat: added react-client | try: monaco x gundb

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "workspaces": [
     "client",
     "jsonrpc-ws-proxy",
-    "p2p-relay"
-  ]
+    "p2p-relay",
+    "react-client"
+  ],
+  "devDependencies": {
+    "create-react-app": "^5.0.1"
+  }
 }
