--- a/package.json
+++ b/package.json
@@ -3,16 +3,12 @@
   "version": "0.0.1",
   "description": "a lightweight yet fully-featured IDE that can be embedded into web apps.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build -w p2p-relay",
-    "start": "npm run dev -w p2p-relay"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mihir Singh <mihirs16@gmail.com> (https://github.com/mihirs16)",
   "license": "MIT",
   "workspaces": [
     "client",
-    "jsonrpc-ws-proxy",
-    "p2p-relay",
-    "svelte-client"
+    "jsonrpc-ws-proxy"
   ]
 }
