--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "monaco-editor": "^0.33.0",
     "monaco-languageclient": "^2.0.2",
-    "vscode-ws-jsonrpc": "^1.0.1"
+    "vscode-ws-jsonrpc": "^1.0.1",
+    "y-monaco": "^0.1.3",
+    "y-webrtc": "^10.2.3",
+    "yjs": "^13.5.39"
   }
 }
