--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "@tsconfig/svelte": "^2.0.1",
+    "carbon-components-svelte": "^0.67.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.7",
     "svelte-navigator": "^3.1.6",
@@ -23,6 +24,7 @@
   "dependencies": {
     "monaco-editor": "^0.33.0",
     "monaco-languageclient": "^2.0.2",
+    "unique-names-generator": "^4.7.1",
     "vscode-ws-jsonrpc": "^1.0.1",
     "y-monaco": "^0.1.3",
     "y-webrtc": "^10.2.3",
