feat: ssl certificate gen

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,3 +4,7 @@ FROM nginx:stable-alpine
 # copy default.conf
 COPY ./conf.d/ /etc/nginx/conf.d/
 
+# copy certbot setup script
+COPY . .
+RUN chmod +x ./cert-setup.sh
+
