--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -15,9 +15,7 @@ upstream jsonrpcproxy {
 }
 
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
+    server_name  monteapi.mihirsingh.dev;
 
     # default
     location / {
